--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section class="home" id="home">
       <div class="home-content">
         <h3>Hallo, It's Me</h3>
-        <h1>Adzkia Hermayulia</h1>
+        <h2>Adzkia Hermayulia</h2>
         <p><b>TI-A</b></p>
         <br>
 
@@ -88,13 +88,15 @@
       <div class="contact-text">
         <h2>Contact <span>Me</span></h2>
         <div class="contact-list">
-          <li><i class="bx bxs-send" style="color: #e6e3b8"></i> Contact adzkiahermayulia08@gmail.com</li>
-          <li><i class="bx bxs-phone" style="color: #e6e3b8"></i> 0895-3140-3536</li>
+          <li><i class="bx bxs-send" style="color: #e6e3b8"></i> &emsp; Contact adzkiahermayulia08@gmail.com</li>
+          <li><i class="bx bxs-phone" style="color: #e6e3b8"></i>  &emsp; 0895-3140-3536</li>
         </div>
         <div class="contact-icons">
           <a href="mailto:adzkiahermayulia08@gmail.co"><i class="bx bxl-gmail"></i></a>
-          <a href="https://instagram.com/adzkiahrmylia_?igshid=MmVlMjlkMTBhMg=="><i class="bx bxl-instagram"></i></a>
           <a href="https://wa.me/qr/6FN26PTUTE52H1"><i class="bx bxl-whatsapp"></i></a>
+          <a href="https://instagram.com/adzkiahrmylia_?igshid=MmVlMjlkMTBhMg=="><i class="bx bxl-instagram"></i></a>
+           <a href=""><i class="bx bxl-github"></i></a>
+          <a href="https://youtube.com/@adzkia6618?si=-_HD-Uk5Uzdzn1-t" style="--i: 10"><i class="bx bxl-youtube"></i></a>
         </div>
       </div>
       <div class="contact-form">
