--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
             <div>
               <img src="img/t1.png" />
               <i class="bi bi-fire" style="color: #e6e3b8"></i>
-              <h2>Tugas 2</h2>
+              <h2>TUGAS 2</h2>
               <p>Coming Soon</p>
               <a href="#" class="read">Lihat</a>
             </div>
             <div>
               <img src="img/t1.png" />
               <i class="bi bi-fire" style="color: #e6e3b8"></i>
-              <h2>Tugas 3</h2>
+              <h2>TUGAS 3</h2>
               <p>Coming Soon</p>
               <a href="#" class="read">Lihat</a>
             </div>
