--- a/index.html
+++ b/index.html
@@ -113,5 +113,6 @@
     <div class="last-text">
       <p>Adzkia Hermayulia © 2023</p>
     </div>
+    <a href="#" class="top"><i class="bx bx-up-arrow-alt"></i></a>
   </body>
 </html>
