--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </div>
       <div class="about-text">
         <h2>About <span>Me</span></h2>
-        <h4><i class="bi bi-feather"></i> Informatics Engineering Student</h4>
+        <h4><i class="bi bi-feather"></i> &emsp; Informatics Engineering Student</h4>
         <p>Halo, Salam Kenal! <i class="bi bi-emoji-laughing"></i></p>
         <a href="#" class="btn-box">More About Me</a>
       </div>
