--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               <i class="bx bxl-youtube" style="color: #e6e3b8"></i>
               <h2>TUGAS 1</h2>
               <p>Membuat Vidio Tutorial Instalasi Sistem Operasi Kali Linux</p>
-              <a href="#" class="read">Lihat</a>
+              <a href="https://youtu.be/3-5rBcgc57s?si=ijdi20XG96OgmqrU" class="read">Lihat</a>
             </div>
             <div>
               <img src="img/t1.png" />
