--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <h1 class="sub-title">My <span>Project</span></h1>
           <div class="project-list">
             <div>
-              <img src="img/kali.png" />
+              <img src="img/linux.png" />
               <i class="bx bxl-youtube" style="color: #e6e3b8"></i>
               <h2>TUGAS 1</h2>
               <p>Membuat Vidio Tutorial Instalasi Sistem Operasi Kali Linux</p>
